# demand-forecast

./: .gitignore  ARIMA_forecast.ipynb  Forecast.ipynb  README.md  pyproject.toml  requirements.txt
Notebooks/: ARIMA.ipynb  Holt_Winter(Expoential Smoothing).ipynb  Linear_regression.ipynb  Prophet_Multivariate.ipynb  Prophet_Univariate.ipynb  XGBoost_Forecast.ipynb  nb001.ipynb  result.py
Notebooks/.ipynb_checkpoints/: nb001-checkpoint.ipynb
Preprocessing & Feature Engineering/: Preprocessing.ipynb
apps/: frontend_v01.py
demand_forecasting_env/: pyvenv.cfg
preprocessing/: dataset.py
src/demand_forecast_engine.egg-info/: SOURCES.txt  requires.txt
src/demand_forecast_engine/config/: base.yaml
src/demand_forecast_engine/evaluation/: metrics.py
src/demand_forecast_engine/feature_engineering/: ts_feats.py
src/demand_forecast_engine/models/: ElasticNet.py  tree_models.py
src/demand_forecast_engine/preprocessing/: dataset.py
src/demand_forecast_engine/preprocessing/.ipynb_checkpoints/: dataset-checkpoint.py
