[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "demand_forecast_engine"
version = "0.1.0"
description = "Demand forecasting pipeline and Streamlit app"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "streamlit>=1.30"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
